--- a/Involving Python..html
+++ b/Involving Python..html
@@ -10,25 +10,16 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/theme/pygments/monokai.min.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
-
-
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
 
-    <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#0040FF">
-    <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#0040FF">
-    <!-- iOS Safari -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <!-- Microsoft EDGE -->
-    <meta name="msapplication-TileColor" content="#0040FF">
+
+
 
 <meta name="author" content="Alex Ioannides" />
 <meta name="description" content="Python in a wonderful language to work with. def add(x, y): return x + y Is one example that comes to mind." />
@@ -38,11 +29,11 @@
 <meta property="og:title" content="Something Interesting"/>
 <meta property="og:description" content="Python in a wonderful language to work with. def add(x, y): return x + y Is one example that comes to mind."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="/Involving Python..html"/>
+<meta property="og:url" content="https://alexioannides.github.io/Involving Python..html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2018-09-09 00:00:00+01:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="/author/alex-ioannides.html">
+<meta property="article:author" content="https://alexioannides.github.io/author/alex-ioannides.html">
 <meta property="article:section" content="code"/>
 <meta property="og:image" content="">
 
@@ -52,15 +43,15 @@
 <body>
   <aside>
     <div>
-      <a href="">
-        <img src="/theme/img/profile.png" alt="Alex Ioannides" title="Alex Ioannides">
+      <a href="https://alexioannides.github.io">
+        <img src="https://alexioannides.github.io/theme/img/profile.png" alt="Alex Ioannides" title="Alex Ioannides">
       </a>
-      <h1><a href="">Alex Ioannides</a></h1>
+      <h1><a href="https://alexioannides.github.io">Alex Ioannides</a></h1>
 
 <p>Financial mathematician and (data) scientist</p>
       <nav>
         <ul class="list">
-          <li><a href="/pages/about.html#about">About</a></li>
+          <li><a href="https://alexioannides.github.io/pages/about.html#about">About</a></li>
 
         </ul>
       </nav>
@@ -78,7 +69,7 @@
   <main>
 
     <nav>
-      <a href="">    Home
+      <a href="https://alexioannides.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -93,7 +84,7 @@
       
     <h1 id="Involving Python.">Something Interesting</h1>
     <p>
-          Posted on Sun 09 September 2018 in <a href="/category/code.html">code</a>
+          Posted on Sun 09 September 2018 in <a href="https://alexioannides.github.io/category/code.html">code</a>
 
 
     </p>
@@ -134,7 +125,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Alex Ioannides ",
-  "url" : "",
+  "url" : "https://alexioannides.github.io",
   "image": "",
   "description": ""
 }
