--- a/Involving Python..html
+++ b/Involving Python..html
@@ -18,6 +18,8 @@
 
 
 
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
 
 
@@ -35,7 +37,7 @@
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="https://alexioannides.github.io/author/alex-ioannides.html">
 <meta property="article:section" content="code"/>
-<meta property="og:image" content="">
+<meta property="og:image" content="images/alex_ioannides.png">
 
   <title>Alex Ioannides &ndash; Something Interesting</title>
 
@@ -44,11 +46,11 @@
   <aside>
     <div>
       <a href="https://alexioannides.github.io">
-        <img src="https://alexioannides.github.io/theme/img/profile.png" alt="Alex Ioannides" title="Alex Ioannides">
+        <img src="images/alex_ioannides.png" alt="Alex Ioannides" title="Alex Ioannides">
       </a>
       <h1><a href="https://alexioannides.github.io">Alex Ioannides</a></h1>
 
-<p>Financial mathematician and (data) scientist</p>
+<p>Financial engineer, (data) scientist, PhD in Computational Neuroscience/AI and habitual coder</p>
       <nav>
         <ul class="list">
           <li><a href="https://alexioannides.github.io/pages/about.html#about">About</a></li>
@@ -126,7 +128,7 @@
   "@type" : "Blog",
   "name": " Alex Ioannides ",
   "url" : "https://alexioannides.github.io",
-  "image": "",
+  "image": "images/alex_ioannides.png",
   "description": ""
 }
 </script>
