--- a/pages/about.html
+++ b/pages/about.html
@@ -81,7 +81,11 @@
     <h1 id="about">About</h1>
   </header>
   <div>
-<p>This is going to become Alex Ioannides's professional blog.</p>  </div>
+<p>I am currently employed as 'Head of Data Science and Market Design' at <a href="http://www.perfectchannel.com">Perfect Channel</a>, a medium-sized (fin)tech start-up/software-development company that develops auction-based trading platforms. I am responsible for using the trade data these platforms generate to: reverse-engineer bidder preferences and wallet sizes (you can get some great information out of auction data and do some wonderful things with it...), segment markets, match buyers-to-sellers, recommend inventory, forecast prices, etc. You get the general theme - lots of 'classic data science'. I also design and build trading mechanisms - I think of this as applied game theory leaning heavily on 'optimisation methods' (linear and integer programming, etc).</p>
+<p>Prior to all this I spent a lot of time think about credit derivates and credit risk, in particular counterparty credit risk. So I know a thing or two about stochastic processes, time-series data, financial mathematics and Monte Carlo methods.</p>
+<p>Going back even further, I once spent a lot of time thinking about computational neuroscience - more specifically the 'early' visual system and how it decodes visual information and turns it into perception. I got a PhD from UCL out this endeavor and learnt a lot about statistical learning and neural networks along the way (before any of this stuff was as powerful and popular as it is now).</p>
+<p>After what seems like donkey's years - prior to completing 3 degrees, working several jobs, getting married and becoming a father - I was 'rather interested' in theoretical physics. I am still interested in this arcane, but wonderful subject - something for 'retirement' maybe? In any case, I think studying physics made me good at solving problems. And long algebra-heavy derivations that consumed a lot of chalk. Luckily for me, I've been able to make a living out of solving interesting problems.</p>
+<p>When there's spare time I like to indulge in a bit of cycling and cycle-racing, write code (for fun!), drink good coffee (try <a href="http://shop.squaremilecoffee.com">these guys</a>) and listen to house, techno and electronic music (this was written to the sounds of <a href="http:///soundcloud.com/dnh/sets/recorded-live">Nick Holder</a>).</p>  </div>
 </article>
 
     <footer>
