--- a/Involving Python..html
+++ b/Involving Python..html
@@ -53,7 +53,8 @@
 <p>Financial engineer, (data) scientist, PhD in Computational Neuroscience/AI and habitual coder</p>
       <nav>
         <ul class="list">
-          <li><a href="https://alexioannides.github.io/pages/about.html#about">About</a></li>
+          <li><a href="https://alexioannides.github.io/pages/about-me.html#about-me">About Me</a></li>
+          <li><a href="https://alexioannides.github.io/pages/about-this-blog.html#about-this-blog">About this Blog</a></li>
 
         </ul>
       </nav>
