--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -33,8 +33,7 @@
 <meta property="og:url" content="https://alexioannides.github.io"/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
-  <title>Alex Ioannides &ndash;     Archives
-</title>
+  <title>Alex Ioannides &ndash; About&nbsp;Me</title>
 
 </head>
 <body>
@@ -79,15 +78,15 @@
 
 <article class="single">
   <header>
-    <h1>    Archives
-</h1>
+    
+    <h1 id="about-me">About&nbsp;Me</h1>
   </header>
   <div>
-    <dl>
-      <dt>Sun 09 September 2018</dt>
-      <dd><a href="https://alexioannides.github.io/something-interesting.html">Something&nbsp;Interesting</a></dd>
-    </dl>
-  </div>
+<p>I am currently employed as &#8216;Head of Data Science and Market Design&#8217; at <a href="http://www.perfectchannel.com">Perfect Channel</a>, a medium-sized (fin)tech start-up/software-development company that develops auction-based trading platforms. I am responsible for using the trade data these platforms generate to: reverse-engineer bidder preferences and wallet sizes (you can get some great information out of auction data and do some wonderful things with it&#8230;), segment markets, match buyers-to-sellers, recommend inventory, forecast prices, etc. You get the general theme - lots of &#8216;classic data science&#8217;. I also design and build trading mechanisms - I think of this as applied game theory leaning heavily on &#8216;optimisation methods&#8217; (linear and integer programming,&nbsp;etc).</p>
+<p>Prior to all this I spent a lot of time think about credit derivates and credit risk, in particular counterparty credit risk. So I know a thing or two about stochastic processes, time-series data, financial mathematics and Monte Carlo&nbsp;methods.</p>
+<p>Going back even further, I once spent a lot of time thinking about computational neuroscience - more specifically the &#8216;early&#8217; visual system and how it decodes visual information and turns it into perception. I got a PhD from <span class="caps">UCL</span> out this endeavor and learnt a lot about statistical learning and neural networks along the way (before any of this stuff was as powerful and popular as it is&nbsp;now).</p>
+<p>After what seems like donkey&#8217;s years - prior to completing 3 degrees, working several jobs, getting married and becoming a father - I was &#8216;rather interested&#8217; in theoretical physics. I am still interested in this arcane, but wonderful subject - something for &#8216;retirement&#8217; maybe? In any case, I think studying physics made me good at solving problems. And long algebra-heavy derivations that consumed a lot of chalk. Luckily for me, I&#8217;ve been able to make a living out of solving interesting&nbsp;problems.</p>
+<p>When there&#8217;s spare time I like to indulge in a bit of cycling and cycle-racing, write code (for fun!), drink good coffee (try <a href="http://shop.squaremilecoffee.com">these guys</a>) and listen to house, techno and electronic music (this was written to the sounds of <a href="http:///soundcloud.com/dnh/sets/recorded-live">Nick Holder</a>).</p>  </div>
 </article>
 
     <footer>
