--- a/tags.html
+++ b/tags.html
@@ -31,7 +31,7 @@
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://alexioannides.github.io"/>
-<meta property="og:image" content="images/alex_ioannides.png">
+<meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
   <title>Alex Ioannides &ndash;     Tags
 </title>
@@ -41,14 +41,15 @@
   <aside>
     <div>
       <a href="https://alexioannides.github.io">
-        <img src="images/alex_ioannides.png" alt="Alex Ioannides" title="Alex Ioannides">
+        <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Alex Ioannides" title="Alex Ioannides">
       </a>
       <h1><a href="https://alexioannides.github.io">Alex Ioannides</a></h1>
 
 <p>Financial engineer, (data) scientist, PhD in Computational Neuroscience/AI and habitual coder</p>
       <nav>
         <ul class="list">
-          <li><a href="https://alexioannides.github.io/pages/about.html#about">About</a></li>
+          <li><a href="https://alexioannides.github.io/pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
+          <li><a href="https://alexioannides.github.io/pages/about-me.html#about-me">About&nbsp;Me</a></li>
 
         </ul>
       </nav>
@@ -82,7 +83,8 @@
 </h1>
   </header>
   <div>
-    <ul class="list">    </ul>
+    <ul class="list">          <li><a href="https://alexioannides.github.io/tag/python.html">python</a> (1)</li>
+    </ul>
   </div>
 </article>
 
@@ -101,7 +103,7 @@
   "@type" : "Blog",
   "name": " Alex Ioannides ",
   "url" : "https://alexioannides.github.io",
-  "image": "images/alex_ioannides.png",
+  "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
 </script>
