--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
           &#8226;     Tagged with
 
-              <a href="https://alexioannides.github.io/tag/python.html">python</a>
+              <a href="https://alexioannides.github.io/tag/test.html">test</a>
     </p>
   </header>
   <div>
