--- a/something-interesting.html
+++ b/something-interesting.html
@@ -25,7 +25,7 @@
 
 <meta name="author" content="Alex Ioannides" />
 <meta name="description" content="Python in a wonderful language to work with. def add(x, y): return x + y Is one example that comes to mind." />
-<meta name="keywords" content="python">
+<meta name="keywords" content="test">
 
 <meta property="og:site_name" content="Alex Ioannides"/>
 <meta property="og:title" content="Something Interesting"/>
@@ -37,7 +37,7 @@
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="https://alexioannides.github.io/author/alex-ioannides.html">
 <meta property="article:section" content="python"/>
-<meta property="article:tag" content="python"/>
+<meta property="article:tag" content="test"/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
   <title>Alex Ioannides &ndash; Something Interesting</title>
@@ -106,7 +106,7 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="https://alexioannides.github.io/tag/python.html">python</a>
+      <a href="https://alexioannides.github.io/tag/test.html">test</a>
     </p>
   </div>
 
