added second test article

--- a/categories.html
+++ b/categories.html
@@ -85,6 +85,7 @@
   </header>
   <div>
     <ul class="list">
+      <li><a href="https://alexioannides.github.io/category/data_science.html">data_science</a> (1)</li>
       <li><a href="https://alexioannides.github.io/category/python.html">python</a> (1)</li>
     </ul>
   </div>
