--- a/tags.html
+++ b/tags.html
@@ -84,7 +84,8 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://alexioannides.github.io/tag/test.html">test</a> (1)</li>
+    <ul class="list">          <li><a href="https://alexioannides.github.io/tag/musings.html">musings</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/test.html">test</a> (1)</li>
     </ul>
   </div>
 </article>
