--- a/archives.html
+++ b/archives.html
@@ -10,47 +10,59 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
-  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/pygments/monokai.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/font-awesome.min.css">
 
-    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
+    <link href="./static/custom.css" rel="stylesheet">
 
+    <link href="https://alexioannides.github.io/feeds/all-atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
+    <link href="https://alexioannides.github.io/feeds/all-rss.xml" type="application/rss+xml" rel="alternate" title="Dr Alex Ioannides RSS">
 
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
+<!-- Google Analytics -->
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-125604661-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
 
-    <meta name="author" content="Alex Ioannides" />
+    <meta name="author" content="Dr Alex Ioannides" />
     <meta name="description" content="" />
-<meta property="og:site_name" content="Alex Ioannides"/>
+<meta property="og:site_name" content="Dr Alex Ioannides"/>
 <meta property="og:type" content="blog"/>
-<meta property="og:title" content="Alex Ioannides"/>
+<meta property="og:title" content="Dr Alex Ioannides"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://alexioannides.github.io"/>
+<meta property="og:url" content="."/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
-  <title>Alex Ioannides &ndash;     Archives
+  <title>Dr Alex Ioannides &ndash;     Archives
 </title>
 
 </head>
 <body>
   <aside>
     <div>
-      <a href="https://alexioannides.github.io">
-        <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Alex Ioannides" title="Alex Ioannides">
+      <a href=".">
+        <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
-      <h1><a href="https://alexioannides.github.io">Alex Ioannides</a></h1>
+      <h1><a href=".">Dr Alex Ioannides</a></h1>
 
-<p>Financial engineer, (data) scientist, PhD in Computational Neuroscience/AI and habitual coder</p>
+<p>Financial engineer - (data) scientist - habitual coder</p>
       <nav>
         <ul class="list">
-          <li><a href="https://alexioannides.github.io/pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
-          <li><a href="https://alexioannides.github.io/pages/about-me.html#about-me">About&nbsp;Me</a></li>
+          <li><a href="./pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
+          <li><a href="./pages/about-me.html#about-me">About&nbsp;Me</a></li>
 
         </ul>
       </nav>
@@ -68,14 +80,18 @@
   <main>
 
     <nav>
-      <a href="https://alexioannides.github.io">    Home
+      <a href=".">    Home
 </a>
 
-      <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
+      <a href="/archives.html">Archives</a>
 
+      <a href="https://alexioannides.github.io/feeds/all-atom.xml">    Atom
+</a>
 
+      <a href="https://alexioannides.github.io/feeds/all-rss.xml">    RSS
+</a>
     </nav>
 
 <article class="single">
@@ -86,9 +102,23 @@
   <div>
     <dl>
       <dt>Sun 09 September 2018</dt>
-      <dd><a href="https://alexioannides.github.io/it-recently-occurred-to-me.html">It Recently Occurred to&nbsp;Me</a></dd>
-      <dt>Sun 09 September 2018</dt>
-      <dd><a href="https://alexioannides.github.io/something-interesting.html">Something&nbsp;Interesting</a></dd>
+      <dd><a href="./it-recently-occurred-to-me.html">It Recently Occurred to&nbsp;Me&#8230;</a></dd>
+      <dt>Wed 17 May 2017</dt>
+      <dd><a href="./machine-learning-pipelines-for-r.html">Machine Learning Pipelines for&nbsp;R</a></dd>
+      <dt>Mon 28 November 2016</dt>
+      <dd><a href="./elasticsearchr-a-lightweight-elasticsearch-client-for-r.html">elasticsearchr - a Lightweight Elasticsearch Client for&nbsp;R</a></dd>
+      <dt>Wed 02 November 2016</dt>
+      <dd><a href="./asynchronous-and-distributed-programming-in-r-with-the-future-package.html">Asynchronous and Distributed Programming in R with the Future&nbsp;Package</a></dd>
+      <dt>Mon 19 September 2016</dt>
+      <dd><a href="./an-r-function-for-generating-authenticated-urls-to-private-web-sites-hosted-on-aws-s3.html">An R Function for Generating Authenticated URLs to Private Web Sites Hosted on <span class="caps">AWS</span>&nbsp;S3</a></dd>
+      <dt>Mon 29 August 2016</dt>
+      <dd><a href="./building-a-data-science-platform-for-rd-part-4-apache-zeppelin-scala-notebooks.html">Building a Data Science Platform for R&D, Part 4 - Apache Zeppelin <span class="amp">&amp;</span> Scala&nbsp;Notebooks</a></dd>
+      <dt>Mon 22 August 2016</dt>
+      <dd><a href="./building-a-data-science-platform-for-rd-part-3-r-r-studio-server-sparkr-sparklyr.html">Building a Data Science Platform for R&D, Part 3 - R, R Studio Server, SparkR <span class="amp">&amp;</span>&nbsp;Sparklyr</a></dd>
+      <dt>Thu 18 August 2016</dt>
+      <dd><a href="./building-a-data-science-platform-for-rd-part-2-deploying-spark-on-aws-using-flintrock.html">Building a Data Science Platform for R&D, Part 2 - Deploying Spark on <span class="caps">AWS</span> using&nbsp;Flintrock</a></dd>
+      <dt>Tue 16 August 2016</dt>
+      <dd><a href="./building-a-data-science-platform-for-rd-part-1-setting-up-aws.html">Building a Data Science Platform for R&D, Part 1 - Setting-Up <span class="caps">AWS</span></a></dd>
     </dl>
   </div>
 </article>
@@ -106,8 +136,8 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Alex Ioannides ",
-  "url" : "https://alexioannides.github.io",
+  "name": " Dr Alex Ioannides ",
+  "url" : ".",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
