--- a/tags.html
+++ b/tags.html
@@ -10,47 +10,59 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
-  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/pygments/monokai.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/font-awesome.min.css">
 
-    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
+    <link href="./static/custom.css" rel="stylesheet">
 
+    <link href="https://alexioannides.github.io/feeds/all-atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
+    <link href="https://alexioannides.github.io/feeds/all-rss.xml" type="application/rss+xml" rel="alternate" title="Dr Alex Ioannides RSS">
 
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
+<!-- Google Analytics -->
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-125604661-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
 
-    <meta name="author" content="Alex Ioannides" />
+    <meta name="author" content="Dr Alex Ioannides" />
     <meta name="description" content="" />
-<meta property="og:site_name" content="Alex Ioannides"/>
+<meta property="og:site_name" content="Dr Alex Ioannides"/>
 <meta property="og:type" content="blog"/>
-<meta property="og:title" content="Alex Ioannides"/>
+<meta property="og:title" content="Dr Alex Ioannides"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://alexioannides.github.io"/>
+<meta property="og:url" content="."/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
-  <title>Alex Ioannides &ndash;     Tags
+  <title>Dr Alex Ioannides &ndash;     Tags
 </title>
 
 </head>
 <body>
   <aside>
     <div>
-      <a href="https://alexioannides.github.io">
-        <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Alex Ioannides" title="Alex Ioannides">
+      <a href=".">
+        <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
-      <h1><a href="https://alexioannides.github.io">Alex Ioannides</a></h1>
+      <h1><a href=".">Dr Alex Ioannides</a></h1>
 
-<p>Financial engineer, (data) scientist, PhD in Computational Neuroscience/AI and habitual coder</p>
+<p>Financial engineer - (data) scientist - habitual coder</p>
       <nav>
         <ul class="list">
-          <li><a href="https://alexioannides.github.io/pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
-          <li><a href="https://alexioannides.github.io/pages/about-me.html#about-me">About&nbsp;Me</a></li>
+          <li><a href="./pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
+          <li><a href="./pages/about-me.html#about-me">About&nbsp;Me</a></li>
 
         </ul>
       </nav>
@@ -68,14 +80,18 @@
   <main>
 
     <nav>
-      <a href="https://alexioannides.github.io">    Home
+      <a href=".">    Home
 </a>
 
-      <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
+      <a href="/archives.html">Archives</a>
 
+      <a href="https://alexioannides.github.io/feeds/all-atom.xml">    Atom
+</a>
 
+      <a href="https://alexioannides.github.io/feeds/all-rss.xml">    RSS
+</a>
     </nav>
 
 <article class="single">
@@ -84,8 +100,13 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://alexioannides.github.io/tag/musings.html">musings</a> (1)</li>
-          <li><a href="https://alexioannides.github.io/tag/test.html">test</a> (1)</li>
+    <ul class="list">          <li><a href="./tag/aws.html">AWS</a> (5)</li>
+          <li><a href="./tag/big-data.html">big data</a> (5)</li>
+          <li><a href="./tag/data-processing.html">data processing</a> (7)</li>
+          <li><a href="./tag/high-performance-computing.html">high-performance computing</a> (1)</li>
+          <li><a href="./tag/machine-learning.html">machine learning</a> (1)</li>
+          <li><a href="./tag/musings.html">musings</a> (1)</li>
+          <li><a href="./tag/spark.html">spark</a> (2)</li>
     </ul>
   </div>
 </article>
@@ -103,8 +124,8 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Alex Ioannides ",
-  "url" : "https://alexioannides.github.io",
+  "name": " Dr Alex Ioannides ",
+  "url" : ".",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
