remove relative links for production

--- a/elasticsearchr-a-lightweight-elasticsearch-client-for-r.html
+++ b/elasticsearchr-a-lightweight-elasticsearch-client-for-r.html
@@ -10,12 +10,12 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="./theme/pygments/monokai.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/font-awesome.min.css">
 
-    <link href="./static/custom.css" rel="stylesheet">
+    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
 
     <link href="https://alexioannides.github.io/feeds/all-atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
@@ -44,11 +44,11 @@
 <meta property="og:title" content="elasticsearchr - a Lightweight Elasticsearch Client for R"/>
 <meta property="og:description" content="Elasticsearch is a distributed NoSQL document store search-engine and column-oriented database, whose fast (near real-time) reads and powerful aggregation engine make it an excellent choice as an ‘analytics database’ for R&amp;D, production-use or both. Installation is simple, it ships with default settings that allow it to work effectively out-of-the-box …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="./elasticsearchr-a-lightweight-elasticsearch-client-for-r.html"/>
+<meta property="og:url" content="https://alexioannides.github.io/elasticsearchr-a-lightweight-elasticsearch-client-for-r.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-11-28 00:00:00+00:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="./author/dr-alex-ioannides.html">
+<meta property="article:author" content="https://alexioannides.github.io/author/dr-alex-ioannides.html">
 <meta property="article:section" content="r"/>
 <meta property="article:tag" content="data processing"/>
 <meta property="article:tag" content="big data"/>
@@ -60,16 +60,16 @@
 <body>
   <aside>
     <div>
-      <a href=".">
+      <a href="https://alexioannides.github.io">
         <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
-      <h1><a href=".">Dr Alex Ioannides</a></h1>
+      <h1><a href="https://alexioannides.github.io">Dr Alex Ioannides</a></h1>
 
 <p>Financial engineer - (data) scientist - habitual coder</p>
       <nav>
         <ul class="list">
-          <li><a href="./pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
-          <li><a href="./pages/about-me.html#about-me">About&nbsp;Me</a></li>
+          <li><a href="https://alexioannides.github.io/pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
+          <li><a href="https://alexioannides.github.io/pages/about-me.html#about-me">About&nbsp;Me</a></li>
 
         </ul>
       </nav>
@@ -87,7 +87,7 @@
   <main>
 
     <nav>
-      <a href=".">    Home
+      <a href="https://alexioannides.github.io">    Home
 </a>
 
       <a href="/categories.html">Categories</a>
@@ -106,7 +106,7 @@
       
     <h1 id="elasticsearchr-a-lightweight-elasticsearch-client-for-r">elasticsearchr - a Lightweight Elasticsearch Client for&nbsp;R</h1>
     <p>
-          Posted on Mon 28 November 2016 in <a href="./category/r.html">r</a>
+          Posted on Mon 28 November 2016 in <a href="https://alexioannides.github.io/category/r.html">r</a>
 
 
     </p>
@@ -114,7 +114,7 @@
 
 
   <div>
-    <p><img alt="elasticsearchr" src="./images/r/elasticsearchr/elasticsearchr2.png" title="Elasticsearchr"></p>
+    <p><img alt="elasticsearchr" src="https://alexioannides.github.io/images/r/elasticsearchr/elasticsearchr2.png" title="Elasticsearchr"></p>
 <p><a href="https://www.elastic.co/products/elasticsearch" title="Elasticsearch">Elasticsearch</a> is a distributed <a href="https://en.wikipedia.org/wiki/NoSQL" title="What is NoSQL?">NoSQL</a> document store search-engine and <a href="https://www.elastic.co/blog/elasticsearch-as-a-column-store" title="Elasticsearch as a Column Store">column-oriented database</a>, whose <strong>fast</strong> (near real-time) reads and powerful aggregation engine make it an excellent choice as an &#8216;analytics database&#8217; for R&amp;D, production-use or both. Installation is simple, it ships with default settings that allow it to work effectively out-of-the-box, and all interaction is made via a set of intuitive and extremely <a href="https://www.elastic.co/guide/en/elasticsearch/reference/current/index.html" title="Elasticsearch documentation">well documented</a> <a href="https://en.wikipedia.org/wiki/Representational_state_transfer" title="RESTful?">RESTful</a> APIs. I&#8217;ve been using it for two years now and I am&nbsp;evangelical.</p>
 <p>The <code>elasticsearchr</code> package implements a simple Domain-Specific Language (<span class="caps">DSL</span>) for indexing, deleting, querying, sorting and aggregating data in Elasticsearch, from within R. The main purpose of this package is to remove the labour involved with assembling <span class="caps">HTTP</span> requests to Elasticsearch&#8217;s <span class="caps">REST</span> APIs and parsing the responses. Instead, users of this package need only send and receive data frames to Elasticsearch resources. Users needing richer functionality are encouraged to investigate the excellent <code>elastic</code> package from the good people at <a href="https://github.com/ropensci/elastic" title="rOpenSci">rOpenSci</a>.
 <!--more-->
@@ -331,8 +331,8 @@ This package is available on <a href="https://cran.r-project.org/web/packages/el
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/data-processing.html">data processing</a>
-      <a href="./tag/big-data.html">big data</a>
+      <a href="https://alexioannides.github.io/tag/data-processing.html">data processing</a>
+      <a href="https://alexioannides.github.io/tag/big-data.html">big data</a>
     </p>
   </div>
 
@@ -371,7 +371,7 @@ This package is available on <a href="https://cran.r-project.org/web/packages/el
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Dr Alex Ioannides ",
-  "url" : ".",
+  "url" : "https://alexioannides.github.io",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
