--- a/archives.html
+++ b/archives.html
@@ -10,12 +10,12 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="./theme/pygments/monokai.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/font-awesome.min.css">
 
-    <link href="./static/custom.css" rel="stylesheet">
+    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
 
     <link href="https://alexioannides.github.io/feeds/all-atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
@@ -43,7 +43,7 @@
 <meta property="og:title" content="Dr Alex Ioannides"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="."/>
+<meta property="og:url" content="https://alexioannides.github.io"/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
   <title>Dr Alex Ioannides &ndash;     Archives
@@ -53,16 +53,16 @@
 <body>
   <aside>
     <div>
-      <a href=".">
+      <a href="https://alexioannides.github.io">
         <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
-      <h1><a href=".">Dr Alex Ioannides</a></h1>
+      <h1><a href="https://alexioannides.github.io">Dr Alex Ioannides</a></h1>
 
 <p>Financial engineer - (data) scientist - habitual coder</p>
       <nav>
         <ul class="list">
-          <li><a href="./pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
-          <li><a href="./pages/about-me.html#about-me">About&nbsp;Me</a></li>
+          <li><a href="https://alexioannides.github.io/pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
+          <li><a href="https://alexioannides.github.io/pages/about-me.html#about-me">About&nbsp;Me</a></li>
 
         </ul>
       </nav>
@@ -80,7 +80,7 @@
   <main>
 
     <nav>
-      <a href=".">    Home
+      <a href="https://alexioannides.github.io">    Home
 </a>
 
       <a href="/categories.html">Categories</a>
@@ -102,23 +102,23 @@
   <div>
     <dl>
       <dt>Sun 09 September 2018</dt>
-      <dd><a href="./it-recently-occurred-to-me.html">It Recently Occurred to&nbsp;Me&#8230;</a></dd>
+      <dd><a href="https://alexioannides.github.io/it-recently-occurred-to-me.html">It Recently Occurred to&nbsp;Me&#8230;</a></dd>
       <dt>Wed 17 May 2017</dt>
-      <dd><a href="./machine-learning-pipelines-for-r.html">Machine Learning Pipelines for&nbsp;R</a></dd>
+      <dd><a href="https://alexioannides.github.io/machine-learning-pipelines-for-r.html">Machine Learning Pipelines for&nbsp;R</a></dd>
       <dt>Mon 28 November 2016</dt>
-      <dd><a href="./elasticsearchr-a-lightweight-elasticsearch-client-for-r.html">elasticsearchr - a Lightweight Elasticsearch Client for&nbsp;R</a></dd>
+      <dd><a href="https://alexioannides.github.io/elasticsearchr-a-lightweight-elasticsearch-client-for-r.html">elasticsearchr - a Lightweight Elasticsearch Client for&nbsp;R</a></dd>
       <dt>Wed 02 November 2016</dt>
-      <dd><a href="./asynchronous-and-distributed-programming-in-r-with-the-future-package.html">Asynchronous and Distributed Programming in R with the Future&nbsp;Package</a></dd>
+      <dd><a href="https://alexioannides.github.io/asynchronous-and-distributed-programming-in-r-with-the-future-package.html">Asynchronous and Distributed Programming in R with the Future&nbsp;Package</a></dd>
       <dt>Mon 19 September 2016</dt>
-      <dd><a href="./an-r-function-for-generating-authenticated-urls-to-private-web-sites-hosted-on-aws-s3.html">An R Function for Generating Authenticated URLs to Private Web Sites Hosted on <span class="caps">AWS</span>&nbsp;S3</a></dd>
+      <dd><a href="https://alexioannides.github.io/an-r-function-for-generating-authenticated-urls-to-private-web-sites-hosted-on-aws-s3.html">An R Function for Generating Authenticated URLs to Private Web Sites Hosted on <span class="caps">AWS</span>&nbsp;S3</a></dd>
       <dt>Mon 29 August 2016</dt>
-      <dd><a href="./building-a-data-science-platform-for-rd-part-4-apache-zeppelin-scala-notebooks.html">Building a Data Science Platform for R&D, Part 4 - Apache Zeppelin <span class="amp">&amp;</span> Scala&nbsp;Notebooks</a></dd>
+      <dd><a href="https://alexioannides.github.io/building-a-data-science-platform-for-rd-part-4-apache-zeppelin-scala-notebooks.html">Building a Data Science Platform for R&D, Part 4 - Apache Zeppelin <span class="amp">&amp;</span> Scala&nbsp;Notebooks</a></dd>
       <dt>Mon 22 August 2016</dt>
-      <dd><a href="./building-a-data-science-platform-for-rd-part-3-r-r-studio-server-sparkr-sparklyr.html">Building a Data Science Platform for R&D, Part 3 - R, R Studio Server, SparkR <span class="amp">&amp;</span>&nbsp;Sparklyr</a></dd>
+      <dd><a href="https://alexioannides.github.io/building-a-data-science-platform-for-rd-part-3-r-r-studio-server-sparkr-sparklyr.html">Building a Data Science Platform for R&D, Part 3 - R, R Studio Server, SparkR <span class="amp">&amp;</span>&nbsp;Sparklyr</a></dd>
       <dt>Thu 18 August 2016</dt>
-      <dd><a href="./building-a-data-science-platform-for-rd-part-2-deploying-spark-on-aws-using-flintrock.html">Building a Data Science Platform for R&D, Part 2 - Deploying Spark on <span class="caps">AWS</span> using&nbsp;Flintrock</a></dd>
+      <dd><a href="https://alexioannides.github.io/building-a-data-science-platform-for-rd-part-2-deploying-spark-on-aws-using-flintrock.html">Building a Data Science Platform for R&D, Part 2 - Deploying Spark on <span class="caps">AWS</span> using&nbsp;Flintrock</a></dd>
       <dt>Tue 16 August 2016</dt>
-      <dd><a href="./building-a-data-science-platform-for-rd-part-1-setting-up-aws.html">Building a Data Science Platform for R&D, Part 1 - Setting-Up <span class="caps">AWS</span></a></dd>
+      <dd><a href="https://alexioannides.github.io/building-a-data-science-platform-for-rd-part-1-setting-up-aws.html">Building a Data Science Platform for R&D, Part 1 - Setting-Up <span class="caps">AWS</span></a></dd>
     </dl>
   </div>
 </article>
@@ -137,7 +137,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Dr Alex Ioannides ",
-  "url" : ".",
+  "url" : "https://alexioannides.github.io",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
