--- a/asynchronous-and-distributed-programming-in-r-with-the-future-package.html
+++ b/asynchronous-and-distributed-programming-in-r-with-the-future-package.html
@@ -10,12 +10,12 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="./theme/pygments/monokai.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/font-awesome.min.css">
 
-    <link href="./static/custom.css" rel="stylesheet">
+    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
 
     <link href="https://alexioannides.github.io/feeds/all-atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
@@ -44,11 +44,11 @@
 <meta property="og:title" content="Asynchronous and Distributed Programming in R with the Future Package"/>
 <meta property="og:description" content="Every now and again someone comes along and writes an R package that I consider to be a ‘game changer’ for the language and it’s application to Data Science. For example, I consider dplyr one such package as it has made data munging/manipulation that more intuitive and more …"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="./asynchronous-and-distributed-programming-in-r-with-the-future-package.html"/>
+<meta property="og:url" content="https://alexioannides.github.io/asynchronous-and-distributed-programming-in-r-with-the-future-package.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-11-02 00:00:00+00:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="./author/dr-alex-ioannides.html">
+<meta property="article:author" content="https://alexioannides.github.io/author/dr-alex-ioannides.html">
 <meta property="article:section" content="r"/>
 <meta property="article:tag" content="data processing"/>
 <meta property="article:tag" content="high-performance computing"/>
@@ -60,16 +60,16 @@
 <body>
   <aside>
     <div>
-      <a href=".">
+      <a href="https://alexioannides.github.io">
         <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
-      <h1><a href=".">Dr Alex Ioannides</a></h1>
+      <h1><a href="https://alexioannides.github.io">Dr Alex Ioannides</a></h1>
 
 <p>Financial engineer - (data) scientist - habitual coder</p>
       <nav>
         <ul class="list">
-          <li><a href="./pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
-          <li><a href="./pages/about-me.html#about-me">About&nbsp;Me</a></li>
+          <li><a href="https://alexioannides.github.io/pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
+          <li><a href="https://alexioannides.github.io/pages/about-me.html#about-me">About&nbsp;Me</a></li>
 
         </ul>
       </nav>
@@ -87,7 +87,7 @@
   <main>
 
     <nav>
-      <a href=".">    Home
+      <a href="https://alexioannides.github.io">    Home
 </a>
 
       <a href="/categories.html">Categories</a>
@@ -106,7 +106,7 @@
       
     <h1 id="asynchronous-and-distributed-programming-in-r-with-the-future-package">Asynchronous and Distributed Programming in R with the Future&nbsp;Package</h1>
     <p>
-          Posted on Wed 02 November 2016 in <a href="./category/r.html">r</a>
+          Posted on Wed 02 November 2016 in <a href="https://alexioannides.github.io/category/r.html">r</a>
 
 
     </p>
@@ -114,7 +114,7 @@
 
 
   <div>
-    <p><img alt="Future!" src="./images/r/future/the_future.jpg" title="the_future"></p>
+    <p><img alt="Future!" src="https://alexioannides.github.io/images/r/future/the_future.jpg" title="the_future"></p>
 <p>Every now and again someone comes along and writes an R package that I consider to be a &#8216;game changer&#8217; for the language and it&#8217;s application to Data Science. For example, I consider <a href="https://github.com/hadley/dplyr" title="dplyr on GitHub">dplyr</a> one such package as it has made data munging/manipulation <em>that</em> more intuitive and more productive than it had been before. Although I only first read about it at the beginning of this week, my instinct tells me that in <a href="https://www.linkedin.com/in/henrikbengtsson" title="Henrik Bengtsson on LinkedIn">Henrik Bengtsson&#8217;s</a> <a href="https://github.com/HenrikBengtsson/future" title="future package in GitHub">future</a> package we might have another such game-changing R&nbsp;package.</p>
 <p>The <a href="https://github.com/HenrikBengtsson/future" title="future package in GitHub">future</a> package provides an <span class="caps">API</span> for futures (or promises) in R. To quote Wikipedia, a <a href="https://en.wikipedia.org/wiki/Futures_and_promises" title="Wikipedia on futures and promises">future or promise</a>&nbsp;is,</p>
 <blockquote>
@@ -278,8 +278,8 @@ values<span class="p">(</span>time_futures<span class="p">)</span>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/data-processing.html">data processing</a>
-      <a href="./tag/high-performance-computing.html">high-performance computing</a>
+      <a href="https://alexioannides.github.io/tag/data-processing.html">data processing</a>
+      <a href="https://alexioannides.github.io/tag/high-performance-computing.html">high-performance computing</a>
     </p>
   </div>
 
@@ -318,7 +318,7 @@ values<span class="p">(</span>time_futures<span class="p">)</span>
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Dr Alex Ioannides ",
-  "url" : ".",
+  "url" : "https://alexioannides.github.io",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
