--- a/authors.html
+++ b/authors.html
@@ -10,12 +10,12 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
-  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/pygments/monokai.min.css">
+  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/font-awesome.min.css">
 
-    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
+    <link href="./static/custom.css" rel="stylesheet">
 
     <link href="https://alexioannides.github.io/feeds/all-atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
@@ -43,7 +43,7 @@
 <meta property="og:title" content="Dr Alex Ioannides"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://alexioannides.github.io"/>
+<meta property="og:url" content="."/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
   <title>Dr Alex Ioannides &ndash;     Authors
@@ -53,16 +53,16 @@
 <body>
   <aside>
     <div>
-      <a href="https://alexioannides.github.io">
+      <a href=".">
         <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
-      <h1><a href="https://alexioannides.github.io">Dr Alex Ioannides</a></h1>
+      <h1><a href=".">Dr Alex Ioannides</a></h1>
 
 <p>Financial engineer - (data) scientist - habitual coder</p>
       <nav>
         <ul class="list">
-          <li><a href="https://alexioannides.github.io/pages/about-this-blog.html#about-this-blog">About this&nbsp;Blog</a></li>
-          <li><a href="https://alexioannides.github.io/pages/about-me.html#about-me">About&nbsp;Me</a></li>
+          <li><a href="./about-this-blog/">About this&nbsp;Blog</a></li>
+          <li><a href="./about-me/">About&nbsp;Me</a></li>
 
         </ul>
       </nav>
@@ -80,7 +80,7 @@
   <main>
 
     <nav>
-      <a href="https://alexioannides.github.io">    Home
+      <a href=".">    Home
 </a>
 
       <a href="/categories.html">Categories</a>
@@ -101,7 +101,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="https://alexioannides.github.io/author/dr-alex-ioannides.html">Dr Alex Ioannides</a> (9)</li>
+      <li><a href="./author/dr-alex-ioannides.html">Dr Alex Ioannides</a> (9)</li>
     </ul>
   </div>
 </article>
@@ -120,7 +120,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Dr Alex Ioannides ",
-  "url" : "https://alexioannides.github.io",
+  "url" : ".",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
