Added data-science/mcmc_vi_pymc3.md post.

--- a/tags.html
+++ b/tags.html
@@ -102,8 +102,10 @@
           <li><a href="https://alexioannides.github.io/tag/data-processing.html">data-processing</a> (7)</li>
           <li><a href="https://alexioannides.github.io/tag/data-stores.html">data-stores</a> (1)</li>
           <li><a href="https://alexioannides.github.io/tag/high-performance-computing.html">high-performance-computing</a> (1)</li>
-          <li><a href="https://alexioannides.github.io/tag/machine-learning.html">machine-learning</a> (1)</li>
-          <li><a href="https://alexioannides.github.io/tag/musings.html">musings</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/machine-learning.html">machine-learning</a> (2)</li>
+          <li><a href="https://alexioannides.github.io/tag/probabilistic-programming.html">probabilistic-programming</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/pymc3.html">pymc3</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/python.html">python</a> (1)</li>
     </ul>
   </div>
 </article>
