Updated About pages

--- a/about-this-blog/index.html
+++ b/about-this-blog/index.html
@@ -56,7 +56,7 @@
       </a>
       <h1><a href="https://alexioannides.github.io">Dr Alex Ioannides</a></h1>
 
-<p>Financial engineer - (data) scientist - habitual coder</p>
+<p>machine learning engineer - (data) scientist - reformed quant - habitual coder</p>
       <nav>
         <ul class="list">
           <li><a href="https://alexioannides.github.io/about-this-blog/">About this&nbsp;Blog</a></li>
@@ -96,15 +96,15 @@
     <h1 id="about-this-blog">About this&nbsp;Blog</h1>
   </header>
   <div>
-<p>Although I am interested in <a href="https://alexioannides.github.io/about-me/">many things</a>, this blog is focused on the discipline that is &#8216;data science&#8217;. Given that this is a nebulous and over-used catch-all phrase I&#8217;ll be more specific - this is a blog about everything that&#8217;s involved in turning raw data into information that one could &#8216;do something&#8217; with. As I see it, this covers the methods and tools used&nbsp;for:</p>
+<p>Although I am interested in <a href="https://alexioannides.github.io/about-me/">many things</a>, this blog is focused on the disciplines of &#8216;data science&#8217; and &#8216;machine learning engineering&#8217;. Given that these are nebulous and over-used catch-all phrases I&#8217;ll be more specific - this is a blog about everything that&#8217;s involved in turning raw data into &#8216;information&#8217; that one could &#8216;do something&#8217; with, via tangible &#8216;end products&#8217;. As I see it, this covers the methods and tools used&nbsp;for:</p>
 <ul>
-<li>data&nbsp;storage,</li>
-<li>data extraction and transformation (<span class="caps">ETL</span>),</li>
-<li>data&nbsp;exploration,</li>
-<li>data&nbsp;modeling,</li>
-<li>serving-up&nbsp;results.</li>
+<li>data&nbsp;storage;</li>
+<li>data extraction and transformation (<span class="caps">ETL</span>);</li>
+<li>data&nbsp;exploration;</li>
+<li>data modeling;&nbsp;and,</li>
+<li>delivering results, decisions and&nbsp;actions.</li>
 </ul>
-<p>I am particularly interested in Python, Scala, Spark, the Elasticsearch stack and <span class="caps">AWS</span>, all from an <span class="caps">OS</span> X user&#8217;s frame of reference. These are my day-to-day tools along with pencil and (squared)&nbsp;paper.</p>  </div>
+<p>I am particularly interested in Python, the &#8216;PyData stack&#8217;, Spark, Elasticsearch, Docker and Kubernetes - all from an <span class="caps">OS</span> X user&#8217;s frame of reference. These are my day-to-day tools along with pencil and (squared)&nbsp;paper.</p>  </div>
 </article>
 
     <footer>
