Added k8s-ml-ops post

--- a/about-this-blog/index.html
+++ b/about-this-blog/index.html
@@ -10,12 +10,12 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
-  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="../theme/pygments/monokai.min.css">
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/font-awesome.min.css">
 
-    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
+    <link href="../static/custom.css" rel="stylesheet">
 
     <link href="https://alexioannides.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
@@ -42,7 +42,7 @@
 <meta property="og:title" content="Dr Alex Ioannides"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://alexioannides.github.io"/>
+<meta property="og:url" content=".."/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
   <title>Dr Alex Ioannides &ndash; About this&nbsp;Blog</title>
@@ -51,16 +51,16 @@
 <body>
   <aside>
     <div>
-      <a href="https://alexioannides.github.io">
+      <a href="..">
         <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
-      <h1><a href="https://alexioannides.github.io">Dr Alex Ioannides</a></h1>
+      <h1><a href="..">Dr Alex Ioannides</a></h1>
 
 <p>machine_learning_engineer - (data)scientist - reformed_quant - habitual_coder</p>
       <nav>
         <ul class="list">
-          <li><a href="https://alexioannides.github.io/about-this-blog/">About this&nbsp;Blog</a></li>
-          <li><a href="https://alexioannides.github.io/about-me/">About&nbsp;Me</a></li>
+          <li><a href="../about-this-blog/">About this&nbsp;Blog</a></li>
+          <li><a href="../about-me/">About&nbsp;Me</a></li>
 
         </ul>
       </nav>
@@ -78,7 +78,7 @@
   <main>
 
     <nav>
-      <a href="https://alexioannides.github.io">    Home
+      <a href="..">    Home
 </a>
 
       <a href="/categories.html">Categories</a>
@@ -96,7 +96,7 @@
     <h1 id="about-this-blog">About this&nbsp;Blog</h1>
   </header>
   <div>
-<p>Although I am interested in <a href="https://alexioannides.github.io/about-me/">many things</a>, this blog is focused on the disciplines of &#8216;data science&#8217; and &#8216;machine learning engineering&#8217;. Given that these are nebulous and over-used catch-all phrases I&#8217;ll be more specific - this is a blog about everything that&#8217;s involved in turning raw data into &#8216;information&#8217; that one could &#8216;do something&#8217; with, via tangible &#8216;end products&#8217;. As I see it, this covers the methods and tools used&nbsp;for:</p>
+<p>Although I am interested in <a href="../about-me/">many things</a>, this blog is focused on the disciplines of &#8216;data science&#8217; and &#8216;machine learning engineering&#8217;. Given that these are nebulous and over-used catch-all phrases I&#8217;ll be more specific - this is a blog about everything that&#8217;s involved in turning raw data into &#8216;information&#8217; that one could &#8216;do something&#8217; with, via tangible &#8216;end products&#8217;. As I see it, this covers the methods and tools used&nbsp;for:</p>
 <ul>
 <li>data&nbsp;storage;</li>
 <li>data extraction and transformation (<span class="caps">ETL</span>);</li>
@@ -121,7 +121,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Dr Alex Ioannides ",
-  "url" : "https://alexioannides.github.io",
+  "url" : "..",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
