--- a/tags.html
+++ b/tags.html
@@ -10,12 +10,12 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="./theme/pygments/monokai.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/pygments/monokai.min.css">
+  <link rel="stylesheet" type="text/css" href="https://alexioannides.github.io/theme/font-awesome/css/font-awesome.min.css">
 
-    <link href="./static/custom.css" rel="stylesheet">
+    <link href="https://alexioannides.github.io/static/custom.css" rel="stylesheet">
 
     <link href="https://alexioannides.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Dr Alex Ioannides Atom">
 
@@ -42,7 +42,7 @@
 <meta property="og:title" content="Dr Alex Ioannides"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="."/>
+<meta property="og:url" content="https://alexioannides.github.io"/>
 <meta property="og:image" content="//avatars1.githubusercontent.com/u/5968486?s=460&v=4">
 
   <title>Dr Alex Ioannides &ndash;     Tags
@@ -52,16 +52,16 @@
 <body>
   <aside>
     <div>
-      <a href=".">
+      <a href="https://alexioannides.github.io">
         <img src="//avatars1.githubusercontent.com/u/5968486?s=460&v=4" alt="Dr Alex Ioannides" title="Dr Alex Ioannides">
       </a>
-      <h1><a href=".">Dr Alex Ioannides</a></h1>
+      <h1><a href="https://alexioannides.github.io">Dr Alex Ioannides</a></h1>
 
 <p>machine_learning_engineer - (data)scientist - reformed_quant - habitual_coder</p>
       <nav>
         <ul class="list">
-          <li><a href="./about-this-blog/">About this&nbsp;Blog</a></li>
-          <li><a href="./about-me/">About&nbsp;Me</a></li>
+          <li><a href="https://alexioannides.github.io/about-this-blog/">About this&nbsp;Blog</a></li>
+          <li><a href="https://alexioannides.github.io/about-me/">About&nbsp;Me</a></li>
 
         </ul>
       </nav>
@@ -79,7 +79,7 @@
   <main>
 
     <nav>
-      <a href=".">    Home
+      <a href="https://alexioannides.github.io">    Home
 </a>
 
       <a href="/categories.html">Categories</a>
@@ -97,21 +97,21 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="./tag/apache-spark.html">apache-spark</a> (2)</li>
-          <li><a href="./tag/aws.html">AWS</a> (5)</li>
-          <li><a href="./tag/data-processing.html">data-processing</a> (7)</li>
-          <li><a href="./tag/data-stores.html">data-stores</a> (1)</li>
-          <li><a href="./tag/docker.html">docker</a> (1)</li>
-          <li><a href="./tag/gcp.html">GCP</a> (1)</li>
-          <li><a href="./tag/high-performance-computing.html">high-performance-computing</a> (1)</li>
-          <li><a href="./tag/kubernetes.html">kubernetes</a> (1)</li>
-          <li><a href="./tag/machine-learning.html">machine-learning</a> (3)</li>
-          <li><a href="./tag/machine-learning-operations.html">machine-learning-operations</a> (1)</li>
-          <li><a href="./tag/probabilistic-programming.html">probabilistic-programming</a> (2)</li>
-          <li><a href="./tag/pymc3.html">pymc3</a> (2)</li>
-          <li><a href="./tag/python.html">python</a> (3)</li>
-          <li><a href="./tag/quant-finance.html">quant-finance</a> (1)</li>
-          <li><a href="./tag/stochastic-processes.html">stochastic-processes</a> (1)</li>
+    <ul class="list">          <li><a href="https://alexioannides.github.io/tag/apache-spark.html">apache-spark</a> (2)</li>
+          <li><a href="https://alexioannides.github.io/tag/aws.html">AWS</a> (5)</li>
+          <li><a href="https://alexioannides.github.io/tag/data-processing.html">data-processing</a> (7)</li>
+          <li><a href="https://alexioannides.github.io/tag/data-stores.html">data-stores</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/docker.html">docker</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/gcp.html">GCP</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/high-performance-computing.html">high-performance-computing</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/kubernetes.html">kubernetes</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/machine-learning.html">machine-learning</a> (3)</li>
+          <li><a href="https://alexioannides.github.io/tag/machine-learning-operations.html">machine-learning-operations</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/probabilistic-programming.html">probabilistic-programming</a> (2)</li>
+          <li><a href="https://alexioannides.github.io/tag/pymc3.html">pymc3</a> (2)</li>
+          <li><a href="https://alexioannides.github.io/tag/python.html">python</a> (3)</li>
+          <li><a href="https://alexioannides.github.io/tag/quant-finance.html">quant-finance</a> (1)</li>
+          <li><a href="https://alexioannides.github.io/tag/stochastic-processes.html">stochastic-processes</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -130,7 +130,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Dr Alex Ioannides ",
-  "url" : ".",
+  "url" : "https://alexioannides.github.io",
   "image": "//avatars1.githubusercontent.com/u/5968486?s=460&v=4",
   "description": ""
 }
