--- a/about-this-blog/index.html
+++ b/about-this-blog/index.html
@@ -96,15 +96,16 @@
     <h1 id="about-this-blog">About this&nbsp;Blog</h1>
   </header>
   <div>
-<p>Although I am interested in <a href="https://alexioannides.github.io/about-me/">many things</a>, this blog is focused on the disciplines of &#8216;data science&#8217; and &#8216;machine learning engineering&#8217;. Given that these are nebulous and over-used catch-all phrases I&#8217;ll be more specific - this is a blog about everything that&#8217;s involved in turning raw data into &#8216;information&#8217; that one could &#8216;do something&#8217; with, via tangible &#8216;end products&#8217;. As I see it, this covers the methods and tools used&nbsp;for:</p>
+<p>Although I am interested in <a href="https://alexioannides.github.io/about-me/">many things</a>, this blog is focused on the disciplines of <em>data science</em> and <em>machine learning engineering and operations</em>. Given that these are nebulous and over-used catch-all phrases I&#8217;ll be more specific - this is a blog about everything that&#8217;s involved in turning raw data into <em>information</em> that one could <em>do something with</em>, via tangible <em>end products</em> that deliver <em>value</em> to someone or something. As I see it, this covers the methods and tools used&nbsp;for:</p>
 <ul>
-<li>data&nbsp;storage;</li>
+<li>data ingestion and&nbsp;storage;</li>
 <li>data extraction and transformation (<span class="caps">ETL</span>);</li>
 <li>data&nbsp;exploration;</li>
-<li>data modeling;&nbsp;and,</li>
-<li>delivering results, decisions and&nbsp;actions.</li>
+<li>data&nbsp;modeling;</li>
+<li>engineering machine learning systems;&nbsp;and,</li>
+<li>automating the production of results, decisions and actions of any&nbsp;kind.</li>
 </ul>
-<p>I am particularly interested in Python, the &#8216;PyData stack&#8217;, Spark, Elasticsearch, Docker and Kubernetes - all from an <span class="caps">OS</span> X user&#8217;s frame of reference. These are my day-to-day tools along with pencil and (squared)&nbsp;paper.</p>  </div>
+<p>I am particularly interested in Python, the &#8216;PyData stack&#8217; (NumPy, SciPy, Scikit-Learn, <span class="caps">PYMC3</span>, etc.), Apache Spark, Elasticsearch, Docker and Kubernetes - all from an <span class="caps">OS</span> X user&#8217;s frame of reference. These are my day-to-day tools along with pencil and (squared)&nbsp;paper.</p>  </div>
 </article>
 
     <footer>
